# vep-annotator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
build_release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  filter_vep
include/: annotation_source.hpp  annotation_sources.hpp  dbnsfp_fields.hpp  exon_intron_numbers.hpp  file_parsers.hpp  filter_vep.hpp  gene_constraint.hpp  hgvs_parser.hpp  output_writer.hpp  plugin.hpp  structural_variant.hpp  transcript_filter.hpp  vep_annotator.hpp
plugins/example/: example_plugin.cpp
scripts/: download_data.sh
src/: file_parsers.cpp  filter_vep.cpp  main.cpp  plugin_loader.cpp  vep_annotator.cpp
src/sources/: conservation_source.cpp  dbnsfp_source.cpp  dbscsnv_source.cpp  domain_source.cpp  lof_source.cpp  maxentscan_source.cpp  regulatory_source.cpp  spliceai_source.cpp
test_data/e2e/: gen_benchmark_100k.py  output_chr22.json
tests/: test_annotation_sources.cpp  test_cli.cpp  test_codon_table.cpp  test_consequences.cpp  test_exon_intron.cpp  test_filter_vep.cpp  test_hgvs.cpp  test_output.cpp  test_spliceai.cpp  test_structural_variant.cpp  test_transcript_filter.cpp
